--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
     image: mysql:5.7
     ports:
       - 13306:3306
+    volumes:
+      - ./.docker/mysql:/docker-entrypoint-initdb.d
     environment:
       MYSQL_DATABASE: mant_db
       MYSQL_USER: mant
